--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -190,7 +190,7 @@
                             </div>
                             <div class="col-md-12 col-xs-12">
                                 <input class="form-control" type="file" id="solutionFiles" name="solutionFiles" multiple>
-                                <div style="height: 20px; margin-top: 5px;">
+                                <div class="col-sm-12 no-padding" style="margin-top: 10px">
                                     @for (int i = 0; i < Model.SolutionAttachments.Count; i++)
                                     {
                                         <div class="attachment-div" style="display: inline;">
