--- a/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
@@ -36,9 +36,9 @@
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
                             @RenderSection("SidebarMenu", false)
-                            <li class="@Html.Raw((controllerName == "Department") ? "active" : "")"><a href="/Helpdesk/ManageTicket">Ticket</a></li>
-                            <li class="@Html.Raw((controllerName == "Manage System Config") ? "active" : "")"><a href="/KnowledgeBase">Knowledge Base</a></li>
-                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Helpdesk/Profile">My profile</a></li>
+                            <li class="@Html.Raw((controllerName == "Department") ? "active" : "")"><a href="/Manager/Department">Department</a></li>
+                            <li class="@Html.Raw((controllerName == "Manage System Config") ? "active" : "")"><a href="/Manager/ManageSC/Priority">System Configuration</a></li>
+                            <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Manager/Profile">Profile </a></li>
                         </ul>
                     </div>
                     <!-- /.navbar-collapse -->
