--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -437,7 +437,7 @@
                                 "html": 'Request by <span class="text-bold">' + creater + '</span>'
                             })[0].outerHTML;
 
-                            var priority = row.Priority == "" ? " None" : '<div class="priority-color" style="background-color: ' + row.PriorityColor + '"></div>&nbsp;<span class="text-bold">' + row.Priority
+                            var priority = row.Priority == "" ? " Unassigned" : '<div class="priority-color" style="background-color: ' + row.PriorityColor + '"></div>&nbsp;<span class="text-bold">' + row.Priority
                             var priorityRow = $("<span/>",
                             {
                                 "html": 'Priority: ' + priority
